bk_ida/gccida/g2/self_promoting_args_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/self_promoting_args_p/src/c-common.c:3501:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/self_promoting_args_p/src/c-common.c:3514:21: error: expected expression
v2 = *( tree_node **)( low + 128); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/self_promoting_args_p/src/c-common.c:3514:9: error: use of undeclared identifier 'tree_node'
v2 = *( tree_node **)( low + 128); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/self_promoting_args_p/src/c-common.c:3515:25: error: expected expression
if ( v2 == ( tree_node *)*( &global_trees + 24) ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/self_promoting_args_p/src/c-common.c:3515:14: error: use of undeclared identifier 'tree_node'
if ( v2 == ( tree_node *)*( &global_trees + 24) ) 
             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/self_promoting_args_p/src/obj/c-common.o] Error 1
